fixed formating of jumbotron on about me, fixed cards and spacing on portfolio, added project 2 and updated resume

--- a/index.css
+++ b/index.css
@@ -5,16 +5,14 @@ body {
 }
 
 .jumbotron {
-	position: fixed;
-	left: 50%!important;
-	z-index: 10;
+	margin-top: 5%;
+	margin-left: auto;
+	margin-right: auto;
 	color: rgb(15, 13, 13);
 	background-color: rgb(140, 194, 196);
 	text-align: justify;
-	top: 50%!important;
-	transform: translate(-50%, -50%);
-	width: fit-content;
-	padding: 50px
+	width: 75%;
+	padding: 40px
 }
 
 .icon{
