--- a/portfolio.css
+++ b/portfolio.css
@@ -1,15 +1,13 @@
 .container {
-  display: flex;
   justify-content: center;
-  position: relative;
   padding: 40px;
 }
 
 .column,.card,.row {
   background-color: rgb(140, 194, 196);
   text-align: center;
-  width: fit-content;
-  padding: 5px;
+  padding: 10px;
+  margin: 10px;
 }
 
 .card-title {
@@ -18,10 +16,11 @@
 
 .btn {
   background-color: rgb(128, 23, 128);
+  margin: 5px;
 }
 
 @media screen and (max-width: 500px) {
   .column {
-    width: 100%;
+    width: auto;
   }
 }
